--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/css/style.css
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/css/style.css
@@ -68,3 +68,37 @@ body.fotos #navegacao a#fotos{
     color: greenyellow;
     background: #de003e;
 }
+
+#conteudo{
+    margin-top: 60px;
+    background: #f5f5f5;
+}
+
+#primario{
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 195px;
+}
+
+#secundario{
+    width: 270px;
+    float: left;
+    margin: 0 0 20px 15px;
+}
+
+#lateral{
+    width: 180px;
+    float: left;
+    margin: 0 0 20px -750px;
+}
+
+#container-rodape{
+    background: #294c71;
+    padding: 20px;
+}
+
+#rodape{
+    width: 750px;
+    margin: 0 auto;
+    color: #fff;
+}
