--- a/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/css/style.css
+++ b/3. CSS3 Intermediário & Avançado/Projeto 4 - Site de Notícias Cidade/css/style.css
@@ -74,22 +74,34 @@ body.fotos #navegacao a#fotos{
     background: #f5f5f5;
 }
 
-#primario{
+#lateral{
+    width: 180px;
+    float: left;
+    margin: 0 0 20px -750px;
+}
+
+#tres-colunas #primario{
     width: 270px;
     float: left;
     margin: 0 0 20px 195px;
+}
+
+#duas-colunas #primario{
+    width: 555px;
+    float: left;
+    margin: 0 0 20px 195px;
+}
+
+#uma-coluna #primario{
+    width: 750px;
+    float: left;
+    margin: 0 0 20px 0;
 }
 
 #secundario{
     width: 270px;
     float: left;
     margin: 0 0 20px 15px;
-}
-
-#lateral{
-    width: 180px;
-    float: left;
-    margin: 0 0 20px -750px;
 }
 
 #container-rodape{
@@ -101,4 +113,23 @@ body.fotos #navegacao a#fotos{
     width: 750px;
     margin: 0 auto;
     color: #fff;
+}
+
+.caixa{
+    margin: 10px 0;
+    padding: 5px;
+    background: #f3f3f3 url(../imagens/fundo-caixa.png);
+}
+
+h2{
+    font-size: 1.1em;
+    background: #294c71;
+    color: #fff;
+    padding: 5px;
+}
+
+.caixa-conteudo{
+    background: #fff;
+    padding: 5px;
+    margin-top: 5px;
 }
