--- a/6. Java Script/Projeto 10 - App Game Mata Mosquito/css/style.css
+++ b/6. Java Script/Projeto 10 - App Game Mata Mosquito/css/style.css
@@ -1,3 +1,7 @@
+html{
+    cursor: url("../imagens/mata_mosca.png") 30 30, auto;
+}
+
 body{
 
     background-image: url(../imagens/bg.jpg);
@@ -8,19 +12,16 @@ body{
 .mosquito1{
     width: 70px;
     height: 70px;
-    cursor: pointer;
 }
 
 .mosquito2{
     width: 90px;
     height: 90px;
-    cursor: pointer;
 }
 
 .mosquito3{
     width: 110px;
     height: 110px;
-    cursor: pointer;
 }
 
 .ladoA{
